test/Sema/match-int-ranges.src
// V %srcc --sema --verify %s
program test;

int i;

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=int.max
match 1 {
    i: 2;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=0, 2..=int.max
match 1 {
    i: 2;
    1: 2;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=0, 3..=int.max
match 1 {
    i: 2;
    1: 2;
    2: 2;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=0, 5..=int.max
match 1 {
    i: 2;
    1: 2;
    4: 2;
    3: 2;
    2: 2;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=0, 3, 5..=int.max
match 1 {
    i: 2;
    1: 2;
    4: 2;
    2: 2;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=0, 3, 5..=19, 21..=int.max
match 1 {
    i: 2;
    1: 2;
    4: 2;
    2: 2;
    20: 2;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: -9223372036854775807..=int.max
match 1 {
    int.min: 1;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: -9223372036854775806..=int.max
match 1 {
    int.min: 1;
    int.min + 1: 1;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: -9223372036854775807, -9223372036854775805..=int.max
match 1 {
    int.min: 1;
    int.min + 2: 1;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=9223372036854775806
match 1 {
    int.max: 1;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=9223372036854775805
match 1 {
    int.max: 1;
    int.max - 1: 1;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=9223372036854775804, 9223372036854775806
match 1 {
    int.max: 1;
    int.max - 2: 1;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: -9223372036854775807..=9223372036854775806
match 1 {
    int.min: 1;
    int.max: 2;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: -9223372036854775807..=-1, 1..=9223372036854775806
match 1 {
    int.min: 1;
    0: 1;
    int.max: 2;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: -9223372036854775805..=-1, 3..=9223372036854775804
match 1 {
    int.min: 1;
    int.max: 2;
    0: 1;
    int.min + 1: 1;
    int.max - 1: 2;
    2: 1;
    int.min + 2 : 1;
    1: 1;
    int.max - 2: 2;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min, -9223372036854775806..=9223372036854775805, int.max
match 1 {
    int.min + 1: 1;
    int.max - 1: 2;
}

// expected-error@+2: 'match' is not exhaustive
// expected-note@+1: Possible value ranges not handled: int.min..=0, 6..=9, 15..=int.max
match 1 {
    1: 1;
    10: 1;
    2: 1;
    11: 1;
    4: 1;
    13: 1;
    5: 1;
    14: 1;
    3: 1;
    12: 1;
}
